# cpp-game-engine

./: .gitignore  CMakeLists.txt  notes.txt
include/: camera.h  cube.h  mesh.h  shader.h  texture.h  transform.h  window.h
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: camera.cpp  cube.cpp  glad.c  main.cpp  mesh.cpp  shader.cpp  texture.cpp  transform.cpp  window.cpp
